--- a/app/views/anios_escolares/_form.html.erb
+++ b/app/views/anios_escolares/_form.html.erb
@@ -13,7 +13,7 @@
 
 <div data-role="fieldcontain">  
   <div class="field">
-    <%= f.hidden_field :colegio_id, :value => 1 %>
+    <%= f.hidden_field :colegio_id, :value => colegio.id %>
   </div>
   <div class="field">
     <%= f.label :año %><br />
