--- a/app/views/grados/_form.html.erb
+++ b/app/views/grados/_form.html.erb
@@ -13,7 +13,7 @@
 
 <div data-role="fieldcontain">
   <div class="field">
-    <%= f.hidden_field :anio_escolar_id, :value => 1 %>
+    <%= f.hidden_field :anio_escolar_id, :value => anio_escolar.id %>
   </div>
  <div class="field">
     <%= f.label :grado %><br />
