--- a/app/views/actividades/index.html.erb
+++ b/app/views/actividades/index.html.erb
@@ -13,7 +13,7 @@
     <div data-role="collapsible" data-collapsed="false">
       <h2>Pendientes</h2>
       <ul data-role="listview" data-filter="true">
-        <% @actividades.pendiente(Time.now).each do |actividad| %>    
+        <% @actividades.pendiente(anio_escolar.id, Time.now).each do |actividad| %>    
           <li data-filtertext="<%= "#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} #{TipoEvento.find(actividad.tipo_evento_id).descripcion} #{actividad.nombre}" %>" >
             <%= link_to actividad do %>  
               <%= simple_format("#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{TipoEvento.find(actividad.tipo_evento_id).descripcion} -  #{actividad.nombre}") %>
@@ -34,7 +34,7 @@
     <div data-role="collapsible">
       <h2>Realizadas</h2>
       <ul data-role="listview" data-filter="true">
-        <% @actividades.realizada(Time.now).each do |actividad| %>    
+        <% @actividades.realizada(anio_escolar.id, Time.now).each do |actividad| %>    
           <li data-filtertext="<%= "#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} #{TipoEvento.find(actividad.tipo_evento_id).descripcion} #{actividad.nombre}" %>" >
             <%= link_to simple_format("#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{TipoEvento.find(actividad.tipo_evento_id).descripcion} -  #{actividad.nombre}"), actividad %>                            
           </li>
