--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -20,7 +20,7 @@
       Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px") %>
       Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px") %>
       <li data-role="fieldcontain">
-        Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+        Sección: <%= collection_select(:seccion, :id, Seccion.por_anioescolar(anio_escolar.id).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       </li>
       <li data-role="fieldcontain">
         Movimiento: <%= collection_select(:tipomovimiento,:id, ListaValor.where("tabla=7"), :item, :descripcion, {:prompt => ':: Seleccione ::', :selected => tipomovimiento}, {"data-mini" => "true", :name => "tipomovimiento_id"}) %>
