--- a/app/views/autorizaciones/index.html.erb
+++ b/app/views/autorizaciones/index.html.erb
@@ -13,8 +13,8 @@
 <div data-role="content">
   <%= form_tag(autorizaciones_path, {:method => :get, "data-ajax" => "false", "name" => "buscar"}) do %>
     <div data-role="fieldcontain">
-      Actividad: <%= collection_select(:actividad, :id, Actividad.where("anio_escolar_id = 1 and requiere_autorizacion = 1").order("fecha_hora_inicio DESC"), :id, :nombre_fecha, {:selected => actividad}, {"data-mini" => "true", :name => "actividad_id"}) %><br />
-      Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, { :prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      Actividad: <%= collection_select(:actividad, :id, Actividad.where("anio_escolar_id = ? and requiere_autorizacion = 1", anio_escolar.id).order("fecha_hora_inicio DESC"), :id, :nombre_fecha, {:selected => actividad}, {"data-mini" => "true", :name => "actividad_id"}) %><br />
+      Sección: <%= collection_select(:seccion, :id, Seccion.por_anioescolar(anio_escolar.id).order('grados.grado','seccion'), :id, :grado_seccion, { :prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
     </div>
   <% end %>
@@ -32,7 +32,7 @@
         <% @autorizaciones.autorizado.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.alumno.apellidos_nombres}" %>"  >
             <%= link_to "#" do %>
-              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(1,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
+              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(anio_escolar.id,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
             <% end %>
           </li>
         <% end  %>
@@ -50,7 +50,7 @@
         <% @autorizaciones.no_autorizado.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.alumno.apellidos_nombres}" %>"  >
             <%= link_to "#" do %>
-              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(1,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
+              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(anio_escolar.id,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
             <% end %>
           </li>
         <% end  %>
@@ -68,7 +68,7 @@
         <% @autorizaciones.pendiente.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.alumno.apellidos_nombres}" %>"  >
             <%= link_to "#" do %>
-              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(1,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
+              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(anio_escolar.id,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
             <% end %>
           </li>
         <% end  %>
