--- a/app/views/cuadernos_controles/_form.html.erb
+++ b/app/views/cuadernos_controles/_form.html.erb
@@ -14,12 +14,12 @@
   <div class="field">
     <% fecha_actual = Date.current %>
     Fecha: <br/>
-    <%= f.text_field :fecha, :readonly => true, :value => fecha_actual,  "data-mini" => "true", "style" => "width:120px" %>
+    <%= f.text_field :fecha, :readonly => true, :value => fecha_actual,  "data-mini" => "true", "style" => "width:130px" %>
     
   </div>
   <div class="field">
     Sección: <br/>
-    <%= collection_select(:cuaderno_control, :seccion_id, Seccion.all, :id, :grado_seccion, {}, {"data-mini" => "true"}) %>
+    <%= collection_select(:cuaderno_control, :seccion_id, Seccion.por_anioescolar(anio_escolar.id).order('grados.grado','seccion'), :id, :grado_seccion, {}, {"data-mini" => "true"}) %>
   </div>
   <div class="field">
     <!--%= f.label :estado %-->
