--- a/app/views/cuadernos_controles/index.html.erb
+++ b/app/views/cuadernos_controles/index.html.erb
@@ -11,7 +11,7 @@
     <div data-role="collapsible" data-collapsed="false">
       <h2>Abiertos</h2>
       <ul data-role="listview" data-filter="true">
-        <% @cuadernos_controles.abierto.each do |cuaderno_control| %>    
+        <% @cuadernos_controles.abierto(anio_escolar.id).each do |cuaderno_control| %>    
           <li data-filtertext="<%= "#{cuaderno_control.fecha.strftime('%d/%m/%Y')} #{Seccion.find(cuaderno_control.seccion_id).grado_seccion} #{ListaValor.find_by_tabla_and_item(5, cuaderno_control.estado).descripcion}" %>" >
             <%= link_to cuaderno_control do %>
               <!--%= image_tag("open_icon.jpg", :class => "ui-li-icon", :alt => "Abierto") %-->
@@ -29,7 +29,7 @@
     <div data-role="collapsible">
       <h2>Cerrados</h2>
       <ul data-role="listview" data-filter="true">
-        <% @cuadernos_controles.cerrado.each do |cuaderno_control| %>    
+        <% @cuadernos_controles.cerrado(anio_escolar.id).each do |cuaderno_control| %>    
           <li data-filtertext="<%= "#{cuaderno_control.fecha.strftime('%d/%m/%Y')} #{Seccion.find(cuaderno_control.seccion_id).grado_seccion} #{ListaValor.find_by_tabla_and_item(5, cuaderno_control.estado).descripcion}" %>" >
             <%= link_to cuaderno_control do %>
               <!--%= image_tag("close_icon.jpg", :class => "ui-li-icon", :alt => "Cerrado") %-->
