--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -13,7 +13,7 @@
 
 <div data-role="fieldcontain">
   <div class="field">
-    <%= f.hidden_field :colegio_id, :value => "1" %>
+    <%= f.hidden_field :colegio_id, :value => colegio.id %>
   </div>
  <div class="field">
     <%= f.label :nombre %><br />
@@ -37,7 +37,7 @@
   </div>
   <div class="field">
     <%= f.label :persona_vinculada_id %><br />
-    <%= collection_select(:usuario, :persona_vinculada_id, PersonaVinculada.all, :id, :apellidos_nombres, { :prompt => ''}, {"data-mini" => "true"}) %>
+    <%= collection_select(:usuario, :persona_vinculada_id, PersonaVinculada.order("apellido_paterno", "apellido_materno", "nombres"), :id, :apellidos_nombres, { :prompt => ''}, {"data-mini" => "true"}) %>
   </div>
   <div class="field">
     <%= f.label :correo %><br />
