--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -11,7 +11,7 @@
   <% seccion = params[:seccion_id] %>
   <% fechaI = params[:fechaI] %>
   <% fechaF = params[:fechaF] %>
-  <% tipomovimiento = params[:tipomovimento_id] %>
+  <% tipomovimiento = params[:tipomovimiento_id] %>
 <% end %>
 
 <div data-role="content">
