mantenimiento de alumnos y actualizacion del menu principal

--- a/app/views/alumnos/alumnoseccion.html.erb
+++ b/app/views/alumnos/alumnoseccion.html.erb
@@ -1,5 +1,5 @@
 <div data-role="header">
-  <h1>Alumnos</h1>
+  <h1>Vincular personas con los alumnos</h1>
 </div>
 <% if !params[:seccion_id].nil? %>
   <% seccion = params[:seccion_id] %>
