--- a/app/views/alumnos/alumnopersona.html.erb
+++ b/app/views/alumnos/alumnopersona.html.erb
@@ -20,7 +20,7 @@
     <% if !alumno_persona_vinculada.persona_vinculada_id.nil? %> 
     <li>
       <% if can? :read, alumno_persona_vinculada %>
-        <%= link_to simple_format(alumno_persona_vinculada.apellidos_nombres), [@alumno, alumno_persona_vinculada] %>
+        <%= link_to simple_format(alumno_persona_vinculada.apellidos_nombres + " ("+ ListaValor.find_by_tabla_and_item(3, alumno_persona_vinculada.tipo_vinculo).descripcion+ ")"), [@alumno, alumno_persona_vinculada] %>
       <% end %>
       
       <% if can? :destroy, alumno_persona_vinculada %>
