--- a/app/views/tipos_notas/edit.html.erb
+++ b/app/views/tipos_notas/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing tipo_nota</h1>
+<div data-role="header">
+    <h1>Editar tipo de nota</h1>
+    <%= link_to 'Regresar', tipos_notas_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @tipo_nota %> |
-<%= link_to 'Back', tipos_notas_path %>
