--- a/app/views/cursos/_form.html.erb
+++ b/app/views/cursos/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@curso) do |f| %>
   <% if @curso.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@curso.errors.count, "error") %> prohibited this curso from being saved:</h2>
+    <div id="error_explanation" data-role="header" data-theme="e">
+      <h2><%= pluralize(@curso.errors.count, "error") %> impidieron que se grabe el registro:</h2>
 
       <ul>
       <% @curso.errors.full_messages.each do |msg| %>
@@ -11,15 +11,20 @@
     </div>
   <% end %>
 
+<div data-role="fieldcontain">
   <div class="field">
     <%= f.label :descripcion %><br />
     <%= f.text_field :descripcion %>
   </div>
   <div class="field">
-    <%= f.label :usuario %><br />
-    <%= f.text_field :usuario %>
+    <%= f.label :abreviatura %><br />
+    <%= f.text_field :abreviatura %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="field">
+    <%= f.hidden_field :usuario, :value => current_user.usuario %>
   </div>
+</div>
+<div class="actions">
+    <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
+</div>
 <% end %>
