--- a/app/views/cursos/show.html.erb
+++ b/app/views/cursos/show.html.erb
@@ -1,15 +1,15 @@
-<p id="notice"><%= notice %></p>
+<div id='Grado' data-role="header">
+  <h1>Detalles</h1>
+  <%= link_to 'Aceptar', cursos_path, "data-icon" => "check", "data-mini" => "true"  %>
+</div>
 
-<p>
-  <b>Descripcion:</b>
-  <%= @curso.descripcion %>
-</p>
+<div data-role="content" style="clear: left">
+  <b>Descripcion:</b> <%= @curso.descripcion %> <p>
+  <b>Abreviatura:</b> <%= @curso.abreviatura %> <p>
+</div>
 
-<p>
-  <b>Usuario:</b>
-  <%= @curso.usuario %>
-</p>
-
-
-<%= link_to 'Edit', edit_curso_path(@curso) %> |
-<%= link_to 'Back', cursos_path %>
+<div data-role="footer">
+  <% if can? :update, @curso %>
+    <%= link_to 'Editar', edit_curso_path(@curso), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>
+  <% end %>
+</div>
