--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -114,19 +114,27 @@
         
       <% if current_user.perfil_id == 1 %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
-          Administracion
+          Administracion Colegio
         </li>
         <li><a href="<%= cargar_alumnos_path %>">Cargar alumnos</a></li>
         <li><a href="<%= cargar_padres_path %>">Cargar padres</a></li>
         <li><a href="<%= cargar_vinculos_path %>">Cargar vínculos</a></li>
         <li><a href="<%= cargar_grados_secciones_path %>">Cargar grados y secciones</a></li>
         <li><a href="<%= anios_escolares_path %>">Años escolares</a></li>
-        <li><a href="<%= listas_valores_path %>">Variables del sistema</a></li>
-        <li><a href="<%= colegios_path %>">Colegios</a></li>
         <li><a href="<%= grados_path %>">Grados</a></li>
         <li><a href="<%= secciones_path %>">Secciones</a></li>
         <li><a href="<%= alumnos_path %>">Alumnos</a></li>
         <li><a href="<%= anios_alumnos_path(:seccion_id => 0) %>">Asignar alumnos a secciones</a></li>
+      <% end %>
+      
+      <% if current_user.perfil_id == 1 %> 
+        <li data-role="list-divider" data-icon="false" data-mini="true">
+          Administracion MiCole
+        </li>
+        <li><a href="<%= listas_valores_path %>">Variables del sistema</a></li>
+        <li><a href="<%= colegios_path %>">Colegios</a></li>
+        <li><a href="<%= cursos_path %>">Cursos</a></li>
+        <li><a href="<%= tipos_notas_path %>">Tipos de nota</a></li>
       <% end %>
     </ul>
     
