--- a/app/views/tipos_notas/index.html.erb
+++ b/app/views/tipos_notas/index.html.erb
@@ -1,27 +1,27 @@
-<h1>Listing tipos_notas</h1>
+<div data-role="header">
+  <h1>Tipos de nota</h1>
+  <% if can? :create, TipoNota %>
+    <%= link_to 'Registrar', new_tipo_nota_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <% end %>
+</div>
 
-<table>
-  <tr>
-    <th>Anio escolar</th>
-    <th>Descripcion</th>
-    <th>Usuario</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @tipos_notas.each do |tipo_nota| %>
-  <tr>
-    <td><%= tipo_nota.anio_escolar_id %></td>
-    <td><%= tipo_nota.descripcion %></td>
-    <td><%= tipo_nota.usuario %></td>
-    <td><%= link_to 'Show', tipo_nota %></td>
-    <td><%= link_to 'Edit', edit_tipo_nota_path(tipo_nota) %></td>
-    <td><%= link_to 'Destroy', tipo_nota, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Tipo nota', new_tipo_nota_path %>
+<div data-role="content">
+  <ul data-role="listview" data-filter="true">
+    <% @tipos_notas.por_anio_escolar(anio_escolar.id).each do |tipo_nota| %>
+    <li data-filtertext="<%= "#{tipo_nota.descripcion} #{tipo_nota.abreviatura}}" %>" >
+      <% if can? :update, tipo_nota %>
+        <% link_opcion = edit_tipo_nota_path(tipo_nota) %>
+      <% else %>
+        <% link_opcion = tipo_nota %>
+      <% end %>
+      <%= link_to link_opcion do %>
+        <%= simple_format("#{tipo_nota.descripcion} - #{tipo_nota.abreviatura}") %>
+      <% end %>
+      
+      <% if can? :destroy, tipo_nota %>
+        <%= link_to 'Eliminar', tipo_nota, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
+      <% end %>
+    </li>
+    <% end %>
+  </ul>
+</div>
