--- a/app/views/tipos_notas/new.html.erb
+++ b/app/views/tipos_notas/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New tipo_nota</h1>
+<div data-role="header">
+  <h1>Crear tipo de nota</h1>
+  <%= link_to 'Regresar', tipos_notas_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', tipos_notas_path %>
