--- a/app/views/grados/show.html.erb
+++ b/app/views/grados/show.html.erb
@@ -6,6 +6,7 @@
 <div data-role="content" style="clear: left">
   <b>Año escolar:</b> <%= AnioEscolar.find(@grado.anio_escolar_id).anio %> <p>
   <b>Grado:</b> <%= @grado.grado %> <p>
+  <b>Nivel:</b> <%= @grado.nivel_desc %>
 </div>
 
 <div data-role="footer">
