--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -6,12 +6,10 @@
   <% seccion = "" %>
   <% fechaI = "" %>
   <% fechaF = "" %>
-  <% tipomovimiento = "" %>
 <% else %>
   <% seccion = params[:seccion_id] %>
   <% fechaI = params[:fechaI] %>
   <% fechaF = params[:fechaF] %>
-  <% tipomovimiento = params[:tipomovimiento_id] %>
 <% end %>
 
 <div data-role="content">
@@ -22,9 +20,6 @@
       <li data-role="fieldcontain">
         Sección: <%= collection_select(:seccion, :id, Seccion.por_anioescolar(anio_escolar.id).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       </li>
-      <li data-role="fieldcontain">
-        Movimiento: <%= collection_select(:tipomovimiento,:id, ListaValor.where("tabla=7"), :item, :descripcion, {:prompt => ':: Seleccione ::', :selected => tipomovimiento}, {"data-mini" => "true", :name => "tipomovimiento_id"}) %>
-      </li>
     <li data-role="fieldcontain">
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
       </li>
@@ -33,23 +28,51 @@
   
   <ul data-role="listview" data-filter="true">
     <% fechaproc = "" %>
+    <% alumfproc = "" %>
+    <% horaingver = "--:--" %>
+    <% horasalver = "--:--" %>
+    <% alumnover  = "" %>
+    <% personaver = "" %>
     <% @asistencias.each do |asistencia| %>
+        <% if alumfproc != asistencia.anio_alumno_id.to_s+ asistencia.fecha_hora.strftime('%Y%m%d') %>
+          <% if !alumfproc.empty? %>
+            <li data-filtertext="<%= alumnover %>" >
+                <h3> <%= alumnover %> </h3>
+                <p class="ui-li-desc"> Ingreso: <%= horaingver%> </p>
+                <p class="ui-li-desc"> Salida: <%= horasalver%>
+                    <% if !personaver.empty? %> con <%= personaver%> <% end %>
+                </p>
+                <% horaingver = "--:--" %>
+                <% horasalver = "--:--" %>
+                <% personaver = "" %>                
+            </li>
+          <% end %>
+          <% alumfproc = asistencia.anio_alumno_id.to_s+ asistencia.fecha_hora.strftime('%Y%m%d') %>
+          <% alumnover = asistencia.anio_alumno.alumno.apellidos_nombres %>
+        <% end %>
         <% if fechaproc < asistencia.fecha_hora.strftime('%Y%m%d') %>
           <% fechaproc = asistencia.fecha_hora.strftime('%Y%m%d') %>
           <li data-role="list-divider" >
             <%= asistencia.fecha %>
           </li>
+        <% end %>        
+        <% if asistencia.tipo_movimiento== 1 %> 
+            <% horaingver = asistencia.hora %> 
+        <% else %> 
+            <% horasalver = asistencia.hora %>
+            <% if !asistencia.persona_vinculada_id.nil? %>
+                <% personaver = asistencia.persona_vinculada.apellidos_nombres %>
+            <% end %>
         <% end %>
-        <li data-filtertext="<%= "#{asistencia.anio_alumno.alumno.apellidos_nombres} " %>" >
-        <!--strong></strong>PM -->
-        <p class="ui-li-heading"> <%= simple_format("#{asistencia.anio_alumno.alumno.apellidos_nombres}") %> </p>
-        <p class="ui-li-aside ui-li-desc">
-            <% if asistencia.tipo_movimiento== 1 %> Ingreso: <% else %> Salida: <% end %>
-            <%= asistencia.hora%>
-        </p>
-        <!-- %= link_to "#" do % -->
-        <!--% end %--> 
-    </li>
+    <% end %>
+    <% if !alumfproc.empty? %>
+        <li data-filtertext="<%= alumnover %>" >
+          <h3> <%= alumnover %> </h3>
+          <p class="ui-li-desc"> Ingreso: <%= horaingver%> </p>
+          <p class="ui-li-desc"> Salida: <%= horasalver%>
+            <% if !personaver.empty? %> con <%= personaver%> <% end %>
+          </p>
+        </li>
     <% end %>
   </ul>
 </div>
