--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -33,7 +33,7 @@
       <% end %>
 
 
-      <% if [1,3].include? current_user.perfil_id %>
+      <% if [1,2,3].include? current_user.perfil_id %>
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Seguridad de alumnos
         </li>
@@ -55,8 +55,12 @@
         <% end %>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= consulta_asistencia_path %>">Consultar asistencias</a></li>
-        <% end %>        
+          <li><a href="<%= consulta_asistencia_path %>">Consultar asistencias por sección</a></li>
+        <% end %>
+        
+        <% if [1,2].include? current_user.perfil_id %>
+          <li><a href="<%= consulta_asistencia_alumno_path %>">Consultar asistencias del alumno</a></li>
+        <% end %>
       <% end %>
 
 
