--- a/app/views/listas_valores/show.html.erb
+++ b/app/views/listas_valores/show.html.erb
@@ -4,10 +4,10 @@
 </div>
 
 <div data-role="content" style="clear: left">
-  <b>Alcance:</b> 
+  <b>Variable:</b> 
       <%= "#{ListaValor.find_by_tabla_and_item(0, @lista_valor.tabla).descripcion}" %>
       <p>
-  <b>Item:</b> <%= @lista_valor.item %> <p>
+  <b>Valor:</b> <%= @lista_valor.item %> <p>
   <b>Descripcion:</b> <%= @lista_valor.descripcion %> <p>
   <b>Abreviatura:</b> <%= @lista_valor.abreviatura %> <p>
 
