--- a/app/views/cuaderno_controles_eventos/index.html.erb
+++ b/app/views/cuaderno_controles_eventos/index.html.erb
@@ -1,31 +1,57 @@
-<h1>Listing cuaderno_controles_eventos</h1>
+<div data-role="header">
+  <h1>Consultar eventos</h1>
+</div>
 
-<table>
-  <tr>
-    <th>Cuaderno control</th>
-    <th>Tipo evento</th>
-    <th>Alumno</th>
-    <th>Descripcion</th>
-    <th>Usuario</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @cuaderno_controles_eventos.each do |cuaderno_control_evento| %>
-  <tr>
-    <td><%= cuaderno_control_evento.cuaderno_control_id %></td>
-    <td><%= cuaderno_control_evento.tipo_evento_id %></td>
-    <td><%= cuaderno_control_evento.alumno_id %></td>
-    <td><%= cuaderno_control_evento.descripcion %></td>
-    <td><%= cuaderno_control_evento.usuario %></td>
-    <td><%= link_to 'Show', cuaderno_control_evento %></td>
-    <td><%= link_to 'Edit', edit_cuaderno_control_evento_path(cuaderno_control_evento) %></td>
-    <td><%= link_to 'Destroy', cuaderno_control_evento, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
+<% if params[:alumno_id].nil? %>
+  <% alumno = "" %>
+<% else %>
+  <% alumno = params[:alumno_id] %>
 <% end %>
-</table>
 
-<br />
+<% persona = PersonaVinculada.logueado(current_user.usuario).first %>
 
-<%= link_to 'New Cuaderno control evento', new_cuaderno_control_evento_path %>
+<div data-role="content" class="ui-content" role="main">
+  <%= form_tag(cuaderno_controles_eventos_path, {"data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
+    <div data-role="fieldcontain">
+      <li data-role="fieldcontain">
+        Alumno: <%= collection_select(:alumno, :id, Alumno.hijos_de(persona.id).order("apellido_paterno", "apellido_materno", "nombres"), :id, :apellidos_nombres, {:selected => alumno}, {"data-mini" => "true", :name => "alumno_id"}) %><br/>
+      </li>
+      <li data-role="fieldcontain">
+        <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
+      </li>
+    </div>
+  <% end %>
+  
+  <div data-role="collapsible-set" data-theme="b" data-content-theme="d" data-inset="false">
+    
+    <div data-role="collapsible" data-collapsed="false">
+      <h2>Pendientes</h2>
+      <ul data-role="listview" data-filter="true">
+        <% @cuaderno_controles_eventos.pendiente(Time.now).each do |cuaderno_control_evento| %>
+          <% if cuaderno_control_evento.alumno_id.nil? || cuaderno_control_evento.alumno_id == alumno.to_i %>
+            <li data-filtertext="<%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion} #{cuaderno_control_evento.descripcion}" %>" >
+                <h3> <%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} - #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion}" %> </h3>
+                <p class="ui-li-desc"> <%= cuaderno_control_evento.descripcion%> </p>
+            </li>
+          <% end  %>
+        <% end  %>
+      </ul>
+    </div>
+    
+    <div data-role="collapsible">
+      <h2>Pasados</h2>
+      <ul data-role="listview" data-filter="true">
+        <% @cuaderno_controles_eventos.pasado(Time.now).each do |cuaderno_control_evento| %>
+          <% if cuaderno_control_evento.alumno_id.nil? || cuaderno_control_evento.alumno_id == alumno.to_i %>
+            <li data-filtertext="<%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion} #{cuaderno_control_evento.descripcion}" %>" >
+                <h3> <%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} - #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion}" %> </h3>
+                <p> <%= "#{cuaderno_control_evento.descripcion}" %> </p>
+              </li>
+            <% end  %>
+          <% end  %>
+      </ul>
+    </div>
+    
+  </div> <!-- collapsible set -->
+  
+</div>
